# cs2-vision-cpp-analyzer

./: .gitignore  CMakeLists.txt  README.md  runtime.example.cfg  xmake.lua
include/vision_analyzer/: action_writer.hpp  aim_controller.hpp  calibration.hpp  csv_writer.hpp  detector.hpp  frame_source.hpp  hid_output.hpp  model_schema.hpp  postprocess.hpp  runtime.hpp  runtime_config.hpp  runtime_session.hpp  tracking.hpp  types.hpp  vision_runtime_c_api.h
src/: action_writer.cpp  aim_controller.cpp  calibration.cpp  calibration_fit.cpp  csv_writer.cpp  detector.cpp  frame_source.cpp  hid_output.cpp  main.cpp  model_schema.cpp  postprocess.cpp  runtime_config.cpp  runtime_session.cpp  tracking.cpp  types.cpp  ui_app.cpp  vision_runtime_c_api.cpp
tests/: test_algorithms.cpp  test_c_api.cpp
